# SecretLetter2026

./: .gitignore  NuGet.Config  SecretLetter.sln  claude-rundown.md
SecretLetter/: App.xaml  App.xaml.cs  Page.xaml  Page.xaml.cs  SecretLetter.csproj  SecretLetter.csproj.silverlight  StoryHandle.cs
SecretLetter.Browser/: App.cs  Program.cs  SecretLetter.Browser.csproj
SecretLetter.Browser/Pages/: Index.cs
SecretLetter.Browser/Properties/: launchSettings.json
SecretLetter.Browser/wwwroot/: index.html
SecretLetter.Desktop/: copy-dist.js  package.json
SecretLetter.Desktop/src-tauri/: Cargo.toml  tauri.conf.json
SecretLetter.Desktop/src-tauri/icons/: icon.icns
SecretLetter.Simulator/: SecretLetter.Simulator.csproj  Startup.cs
SecretLetter/Controls/: IntroBook.xaml  IntroBook.xaml.cs  MapLeft.xaml  MapLeft.xaml.cs  MapRight.xaml  MapRight.xaml.cs
SecretLetter/GameFiles/: Arts.xml  Fonts.xml  GameFile.Designer.cs  GameFile.resx  Manual.xml  Settings.xml  WordDefinition.xml  sl-v1.05e.ulx  (+3 more)
Textfyre.UI/: CompressingStream.cs  DecompressingStream.cs  GameModes.cs  Keyboard.cs  Master.xaml  Master.xaml.cs  Page.xaml  Page.xaml.cs  Resource.Designer.cs  Resource.resx  ServiceReferences.ClientConfig  Settings.cs  SpotArt.cs  StoryHandle.cs  Textfyre.UI.csproj  Textfyre.UI.csproj.silverlight  UserSettings.cs
Textfyre.VM/: BigEndian.cs  COPYRIGHT  Engine.cs  HeapAllocator.cs  Opcodes.cs  Output.cs  OutputBuffer.cs  Profiler.cs  Quetzal.cs  Textfyre.VM.csproj  Textfyre.VM.csproj.silverlight  UlxImage.cs  VMException.cs  Veneer.cs
site/: deploy.sh  index.html
(+149 files in other folders)
